force-app/main/default/objects/Country_Attribute__c.object
<CustomObject>
    <description>This allows the definition of various country attributes (e.g. mapping to ISO codes, ABS codes, Australian border, department of education codes, restricted countries, flags for different user groups which can be used to drive sharing of records etc.)</description>
    <fields>
        <fullName>Active_Ind__c</fullName>
        <defaultValue>true</defaultValue>
        <description>An indicator for record status. Allows country records to be disabled from selection but retain historical data relationships.</description>
        <label>Active Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_f__c</fullName>
        <description>On/Off light bulb indicator</description>
        <formula>IF (Active_Ind__c
, IMAGE(&quot;/resource/1500335404000/GraphicsPackNew/fatcow/farmfresh/16/lightbulb.png&quot;, &quot;Active&quot;, 16, 16)
, IMAGE(&quot;/resource/1500335404000/GraphicsPackNew/fatcow/farmfresh/16/lightbulb_off.png&quot;, &quot;Not Active&quot;, 16, 16)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Active if yellow!</inlineHelpText>
        <label>Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Code__c</fullName>
        <description>System Field.

An alternative country code to aid in transformations between external values and the SACC/ISO values that we align to.</description>
        <label>Alt Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Name_1__c</fullName>
        <description>System Field.

An alternative country name to aid in transformations between external values and the SACC/ISO values that we align to.</description>
        <label>Alt Name 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Name_2__c</fullName>
        <description>System Field.

An alternative country name to aid in transformations between external values and the SACC/ISO values that we align to.</description>
        <label>Alt Name 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a country is currently blocked by salesforce</description>
        <inlineHelpText>True if country is blocked by salesforce</inlineHelpText>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Callista_Code__c</fullName>
        <description>The unique identifier for the country record in Callista</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique identifier for a country record in Callista</inlineHelpText>
        <label>Callista Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Callista_Country__c</fullName>
        <description>The Callista country name. The value set should contain the SACC standard list of names.</description>
        <inlineHelpText>The Callista country name</inlineHelpText>
        <label>Callista Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_List_2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>The ISO country name</description>
        <inlineHelpText>The ISO country name</inlineHelpText>
        <label>ISO Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_List_1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GTE_Risk_Rating__c</fullName>
        <description>Countries and some regional areas will receive a Monash GTE risk rating based on a variety of risk-related data and known environmental factors. The rating will inform the appropriate GTE assessment action taken by the Admissions office.</description>
        <inlineHelpText>The Monash GTE risk rating based on a variety of risk-related data</inlineHelpText>
        <label>GTE Risk Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ISO_Alpha_2__c</fullName>
        <description>The two-letter ISO alpha country representation.

https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2</description>
        <inlineHelpText>The two-letter ISO alpha country representation.</inlineHelpText>
        <label>ISO Alpha-2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_Alpha_3__c</fullName>
        <description>These codes are three-letter country codes defined in ISO 3166-1

https://en.wikipedia.org/wiki/ISO_3166-1_alpha-3</description>
        <inlineHelpText>The three-letter country code defined in ISO</inlineHelpText>
        <label>ISO Alpha-3</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumericPhoneCode__c</fullName>
        <description>The codes are two or three digit numeric values for phone prefix, stored as string for consistency with country codes</description>
        <inlineHelpText>The phone number prefix for the country</inlineHelpText>
        <label>Numeric Phone Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numeric_Country_Code__c</fullName>
        <description>The codes are three-digit country codes defined in ISO. While numeric, they do contain leading &apos;0&apos;s.</description>
        <inlineHelpText>The three-digit country code defined in ISO</inlineHelpText>
        <label>Numeric Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PD_Shared__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System field Created for professional development.

Crosschecked against Shop.Monash country list.</description>
        <label>PD Shared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regional_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Regional Manager (Salesforce User) responsible for the managing the relationship with Agencies located in a given Country.</description>
        <inlineHelpText>Regional Manager (Salesforce User) responsible for the managing the relationship with Agencies located in a given Country.</inlineHelpText>
        <label>Regional Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Country</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_SMS_Unsupported__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Country is not supported by Salesforce SMS service.</description>
        <inlineHelpText>Country is not supported by Salesforce SMS service.</inlineHelpText>
        <label>SFDC SMS Unsupported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sanctioned_by_Salesforce__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Country Sanctioned by Salesforce</description>
        <inlineHelpText>Country is sanctioned by Salesforce and SMS service is not supported</inlineHelpText>
        <label>Sanctioned by Salesforce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShortName__c</fullName>
        <description>User friendly short name for the country.</description>
        <inlineHelpText>Country shortened name.</inlineHelpText>
        <label>Short Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Name__c</fullName>
        <description>An alternative country name to aid in transformations between external values and the SACC/ISO values that we align to.</description>
        <label>State Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <description>The timezone for the capital city.</description>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Africa/Algiers</fullName>
                </value>
                <value>
                    <fullName>Africa/Cairo</fullName>
                </value>
                <value>
                    <fullName>Africa/Casablanca</fullName>
                </value>
                <value>
                    <fullName>Africa/Johannesburg</fullName>
                </value>
                <value>
                    <fullName>Africa/Nairobi</fullName>
                </value>
                <value>
                    <fullName>America/Adak</fullName>
                </value>
                <value>
                    <fullName>America/Anchorage</fullName>
                </value>
                <value>
                    <fullName>America/Bogota</fullName>
                </value>
                <value>
                    <fullName>America/Caracas</fullName>
                </value>
                <value>
                    <fullName>America/Chicago</fullName>
                </value>
                <value>
                    <fullName>America/Denver</fullName>
                </value>
                <value>
                    <fullName>America/El_Salvador</fullName>
                </value>
                <value>
                    <fullName>America/Halifax</fullName>
                </value>
                <value>
                    <fullName>America/Lima</fullName>
                </value>
                <value>
                    <fullName>America/Los_Angeles</fullName>
                </value>
                <value>
                    <fullName>America/Mazatlan</fullName>
                </value>
                <value>
                    <fullName>America/Mexico_City</fullName>
                </value>
                <value>
                    <fullName>America/New_York</fullName>
                </value>
                <value>
                    <fullName>America/Panama</fullName>
                </value>
                <value>
                    <fullName>America/Phoenix</fullName>
                </value>
                <value>
                    <fullName>America/Puerto_Rico</fullName>
                </value>
                <value>
                    <fullName>America/Santiago</fullName>
                </value>
                <value>
                    <fullName>America/Sao_Paulo</fullName>
                </value>
                <value>
                    <fullName>America/Scoresbysund</fullName>
                </value>
                <value>
                    <fullName>America/St_Johns</fullName>
                </value>
                <value>
                    <fullName>America/Tijuana</fullName>
                </value>
                <value>
                    <fullName>America/Argentina/Buenos_Aires</fullName>
                </value>
                <value>
                    <fullName>Asia/Baghdad</fullName>
                </value>
                <value>
                    <fullName>Asia/Baku</fullName>
                </value>
                <value>
                    <fullName>Asia/Bangkok</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>uniqueCountryExternalId__c</fullName>
        <externalId>true</externalId>
        <label>Unique Country ExternalId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Country</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>NumericPhoneCode__c</columns>
        <columns>Callista_Country__c</columns>
        <columns>Country__c</columns>
        <columns>Callista_Code__c</columns>
        <columns>ISO_Alpha_2__c</columns>
        <columns>ISO_Alpha_3__c</columns>
        <columns>ShortName__c</columns>
        <columns>Regional_Manager__c</columns>
        <columns>GTE_Risk_Rating__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Country</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>